Fixed alignment issue

--- a/assets/style.css
+++ b/assets/style.css
@@ -194,7 +194,7 @@ nav {
 }
 
 .card-is-flipped-start {
-  /* transform: rotateY(180deg) translateX(-100%); */
+   transform: rotateY(180deg) scaleX(-1);
     
 }
 
